add docker composer and upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -24,44 +24,45 @@
     "test:e2e:cov": "jest --config ./test/jest-e2e.json --coverage"
   },
   "dependencies": {
-    "@nestjs/common": "^8.2.3",
-    "@nestjs/core": "^8.2.3",
-    "@nestjs/platform-fastify": "^8.2.3",
-    "@nestjs/swagger": "^5.1.5",
-    "@nestjs/typeorm": "^8.0.2",
-    "bcrypt": "^5.0.1",
-    "fastify-compress": "^3.6.0",
-    "fastify-swagger": "^4.8.0",
+    "@nestjs/common": "^11.1.3",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.3",
+    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/swagger": "^11.2.0",
+    "@nestjs/typeorm": "^11.0.0",
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "compression": "^1.8.0",
     "mysql2": "^3.14.1",
-    "pg": "^8.6.0",
-    "pg-hstore": "^2.3.4",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.4.0",
-    "typeorm": "^0.2.34"
+    "reflect-metadata": "^0.1.14",
+    "rimraf": "^6.0.1",
+    "rxjs": "^7.8.2",
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "^1.1.16",
-    "@nestjs/cli": "^8.1.5",
-    "@nestjs/schematics": "^8.0.5",
-    "@nestjs/testing": "^8.2.3",
-    "@types/bcrypt": "^5.0.0",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.11",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.4.2",
-    "prettier": "^2.2.1",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.7",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "@compodoc/compodoc": "^1.1.26",
+    "@nestjs/cli": "^11.0.7",
+    "@nestjs/schematics": "^11.0.5",
+    "@nestjs/testing": "^11.1.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.8.1",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^24.0.7",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "eslint": "^9.30.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "jest": "^30.0.3",
+    "prettier": "^3.6.2",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.4.0",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.3"
   },
   "jest": {
     "moduleFileExtensions": [
