--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "db:up": "docker compose -f docker-compose.yml up -d mysql",
     "db:down": "docker compose -f docker-compose.yml down",
     "db:logs": "docker compose -f docker-compose.yml logs -f mysql",
-    "doc": "npx @compodoc/compodoc -p tsconfig.json -d ./docs",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run typeorm migration:generate -- -d apps/api-gateway/src/commons/data-source.ts database/migrations/$npm_config_name",
+    "migration:run": "npm run typeorm migration:run -- -d apps/api-gateway/src/commons/data-source.ts",
     "prebuild": "rimraf dist",
     "postinstall": "node build/postInstall.js",
     "build": "nest build",
@@ -24,7 +26,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/api-gateway/test/jest-e2e.json",
-    "test:e2e:cov": "jest --config ./test/jest-e2e.json --coverage"
+    "test:e2e:cov": "jest --config ./test/jest-e2e.json --coverage",
+    "doc": "npx @compodoc/compodoc -p tsconfig.json -d ./docs"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.3",
@@ -37,6 +40,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.0",
+    "dotenv": "^17.0.1",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.1.14",
     "rimraf": "^6.0.1",
