--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "db:up": "docker compose -f docker-compose.yml up -d mysql",
-    "db:down": "docker compose -f docker-compose.yml down",
-    "db:logs": "docker compose -f docker-compose.yml logs -f mysql",
+    "docker:up": "docker compose -f docker-compose.yml up -d",
+    "docker:down": "docker compose -f docker-compose.yml down",
+    "docker:logs": "docker compose -f docker-compose.yml logs -f",
+    "docker:restart": "docker compose -f docker-compose.yml down && docker compose -f docker-compose.yml up -d",
     "db:seed": "ts-node -r tsconfig-paths/register database/seeder.ts",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "npm run typeorm migration:generate -- -d apps/api-gateway/src/commons/data-source.ts database/migrations/$npm_config_name",
@@ -37,11 +38,13 @@
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "async-retry": "^1.3.3",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.0",
     "dotenv": "^17.0.1",
+    "kafkajs": "^2.2.4",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.1.14",
     "rimraf": "^6.0.1",
