--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "doc": "npx @compodoc/compodoc -p tsconfig.json -d ./docs"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.842.0",
+    "@aws-sdk/s3-request-presigner": "^3.842.0",
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
@@ -46,6 +48,7 @@
     "compression": "^1.8.0",
     "dotenv": "^17.0.1",
     "kafkajs": "^2.2.4",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.1.14",
     "rimraf": "^6.0.1",
@@ -61,6 +64,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.8.1",
     "@types/jest": "^27.5.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.0.7",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
