--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -11,7 +11,6 @@ on:
 permissions:
   id-token: write
   contents: read
-  pull-requests: write # optional, only needed if you comment on PRs
 
 jobs:
   terraform:
@@ -21,30 +20,39 @@ jobs:
       run:
         working-directory: infrastructure/staging
 
+    env:
+      TF_VAR_ami_id: ${{ secrets.TF_VAR_AMI_ID }}
+      TF_VAR_aws_region: ${{ secrets.TF_VAR_AWS_REGION }}
+      TF_VAR_instance_type: ${{ secrets.TF_VAR_INSTANCE_TYPE }}
+      TF_VAR_key_name: ${{ secrets.TF_VAR_KEY_NAME }}
+      TF_VAR_security_group_name: ${{ secrets.TF_VAR_SECURITY_GROUP_NAME }}
+      TF_VAR_subnet_id: ${{ secrets.TF_VAR_SUBNET_ID }}
+      TF_VAR_vpc_id: ${{ secrets.TF_VAR_VPC_ID }}
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Configure AWS Credentials via OIDC And this workflow directly connects to AWS via GitHub OIDC and runs Terraform to create or update the cloud resources.
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          aws-region: us-east-1
+          aws-region: ${{ secrets.TF_VAR_AWS_REGION }}
 
-      - name: Setup Terraform // Get access to AWS account
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.2
 
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -input=false
 
       - name: Terraform Validate
         run: terraform validate
 
       - name: Terraform Plan
-        run: terraform plan
+        run: terraform plan -input=false
 
-      - name: Terraform Apply (only on push to develop)
+      - name: Terraform Apply (on push to develop)
         if: github.event_name == 'push'
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -input=false
