update node version in docker file

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -43,7 +43,11 @@ jobs:
 
       - name: Build Docker image
         run: |
+          echo "Working directory:"
+          pwd
+          ls -al
           docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+        working-directory: ${{ github.workspace }}
 
       - name: Tag Docker image
         run: |
