--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -20,47 +20,10 @@ jobs:
 
     defaults:
       run:
-        # Ensure we run from the repo root (not .github/workflows/)
         working-directory: ${{ github.workspace }}
 
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials using OIDC
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Get AWS Account ID
-        id: aws-account
-        run: |
-          echo "AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)" >> $GITHUB_ENV
-
-      - name: Build Docker image
-        run: |
-          echo "Working directory:"
-          pwd
-          ls -al
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
-        working-directory: ${{ github.workspace }}
-
-      - name: Tag Docker image
-        run: |
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
-
-      - name: Push Docker image to ECR
-        run: |
-          docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
-  build-and-deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials using OIDC
@@ -93,12 +56,15 @@ jobs:
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_PUBLIC_IP }}
-          username: ec2-user # or 'ubuntu' if using Ubuntu AMI
+          username: ec2-user
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
-            export AWS_REGION=us-east-1
+            export AWS_REGION=${{ env.AWS_REGION }}
             export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
-            cd /home/ec2-user/twitter-backend-node
+
             aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+
+            cd /home/ec2-user/twitter-backend-node
+
             docker-compose pull
             docker-compose up -d --remove-orphans
