--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,28 @@
-version: '3.8'
-
 services:
+  app:
+    build:
+      context: .
+    ports:
+      - '3000:3000'
+    environment:
+      - DATABASE_HOST=mysql
+      - DATABASE_PORT=3306
+      - DATABASE_NAME=yoodb
+      - DATABASE_USER=yooadmin
+      - DATABASE_PASSWORD=yoopass
+      - KAFKA_BROKERS=kafka:29092
+      - REDIS_HOST=yoo-redis
+      - REDIS_PORT=6379
+    depends_on:
+      - mysql
+      - kafka
+      - redis
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:3000/health']
+      interval: 10s
+      retries: 5
+      timeout: 5s
+
   mysql:
     image: mysql:8.3
     container_name: yoo-mysql
@@ -11,11 +33,11 @@ services:
       MYSQL_USER: yooadmin
       MYSQL_PASSWORD: yoopass
     ports:
-      - "3306:3306"
+      - '3306:3306'
     volumes:
       - mysql_data:/var/lib/mysql
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
       interval: 10s
       retries: 5
       timeout: 5s
@@ -25,22 +47,29 @@ services:
     container_name: kafka
     restart: always
     ports:
-      - "9092:9092"
+      - '9092:9092'
     environment:
       KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,INTERNAL://kafka:29092
       KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,INTERNAL://:29092,CONTROLLER://:9093
       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
       KAFKA_CFG_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_KRAFT_MODE_ENABLED: "yes"
-      KAFKA_CFG_NODE_ID: "1"
+      KAFKA_KRAFT_MODE_ENABLED: 'yes'
+      KAFKA_CFG_NODE_ID: '1'
       KAFKA_CFG_PROCESS_ROLES: controller,broker
       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      ALLOW_PLAINTEXT_LISTENER: "yes"
+      ALLOW_PLAINTEXT_LISTENER: 'yes'
     volumes:
       - kafka_data:/bitnami/kafka
     healthcheck:
-      test: ["CMD", "kafka-topics.sh", "--bootstrap-server", "localhost:9092", "--list"]
+      test:
+        [
+          'CMD',
+          'kafka-topics.sh',
+          '--bootstrap-server',
+          'kafka:29092',
+          '--list',
+        ]
       interval: 10s
       retries: 5
       timeout: 5s
@@ -49,7 +78,7 @@ services:
     image: docker.redpanda.com/redpandadata/console:latest
     container_name: redpanda-console
     ports:
-      - "8080:8080"
+      - '8080:8080'
     environment:
       - KAFKA_BROKERS=kafka:29092
     depends_on:
@@ -60,11 +89,11 @@ services:
     container_name: yoo-redis
     restart: always
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - redis_data:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ['CMD', 'redis-cli', 'ping']
       interval: 10s
       retries: 5
       timeout: 5s
@@ -73,4 +102,3 @@ volumes:
   mysql_data:
   redis_data:
   kafka_data:
-
