--- a/.github/workflows/provision-infra.yml
+++ b/.github/workflows/provision-infra.yml
@@ -3,10 +3,10 @@ name: Deploy Staging Infrastructure
 on:
   push:
     branches:
-      - develop
+      - main
   pull_request:
     branches:
-      - develop
+      - main
 
 permissions:
   id-token: write
