--- a/.github/workflows/ssh-test.yml
+++ b/.github/workflows/ssh-test.yml
@@ -1,13 +1,20 @@
-name: Test SSH Connection
+name: Test SSH to EC2
 
 on:
+  push:
+    branches:
+      - main
+
   workflow_dispatch:
 
 jobs:
-  test-ssh:
+  test-ssh-connection:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Test SSH Connection
         uses: appleboy/ssh-action@v1.0.0
         with:
