--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -173,6 +173,32 @@ jobs:
         run: |
           docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
 
+  inject-env-vars:
+    name: Inject Env Vars from AWS Secrets Manager
+    runs-on: ubuntu-latest
+    needs: terraform
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Inject environment variables from Secrets Manager
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_PUBLIC_IP }}
+          username: ec2-user
+          key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+          script: |
+            SECRET_NAME="prod/nestjs-app/envs"
+            REGION="us-east-1"
+
+            # Fetch secrets and create .env file
+            aws secretsmanager get-secret-value \
+              --secret-id $SECRET_NAME \
+              --region $REGION \
+              --query SecretString \
+              --output text > /home/ec2-user/twitter-backend-node/.env
+
   deploy-to-ec2:
     name: Deploy Docker Image to EC2
     runs-on: ubuntu-latest
@@ -196,11 +222,19 @@ jobs:
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
             export AWS_REGION=${{ env.AWS_REGION }}
+            export SECRET_NAME=${{ secrets.SECRET_NAME }}
             export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
 
             aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
 
             cd /home/ec2-user/twitter-backend-node
 
-            docker-compose pull
-            docker-compose up -d --remove-orphans
+            # Create or overwrite .env file with secrets from AWS Secrets Manager
+            aws secretsmanager get-secret-value \
+              --secret-id $SECRET_NAME \
+              --region $AWS_REGION \
+              --query SecretString \
+              --output text > .env
+
+            docker compose -f docker/docker-compose-prod.yml pull
+            docker compose -f docker/docker-compose-prod.yml up -d --remove-orphans
