--- a/docker/docker-compose-prod.yml
+++ b/docker/docker-compose-prod.yml
@@ -1,18 +1,14 @@
+version: '3.8'
+
 services:
   app:
-    build:
-      context: .
+    image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:${IMAGE_TAG}
+    container_name: yoo-app-prod
+    restart: always
     ports:
       - '3000:3000'
-    environment:
-      - DATABASE_HOST=mysql
-      - DATABASE_PORT=3306
-      - DATABASE_NAME=yoodb
-      - DATABASE_USER=yooadmin
-      - DATABASE_PASSWORD=yoopass
-      - KAFKA_BROKERS=kafka:29092
-      - REDIS_HOST=yoo-redis
-      - REDIS_PORT=6379
+    env_file:
+      - .env
     depends_on:
       - mysql
       - kafka
@@ -25,15 +21,13 @@ services:
 
   mysql:
     image: mysql:8.3
-    container_name: yoo-mysql
+    container_name: yoo-mysql-prod
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: yoodb
       MYSQL_USER: yooadmin
       MYSQL_PASSWORD: yoopass
-    ports:
-      - '3306:3306'
     volumes:
       - mysql_data:/var/lib/mysql
     healthcheck:
@@ -44,12 +38,10 @@ services:
 
   kafka:
     image: bitnami/kafka:latest
-    container_name: kafka
+    container_name: yoo-kafka-prod
     restart: always
-    ports:
-      - '9092:9092'
     environment:
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,INTERNAL://kafka:29092
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,INTERNAL://kafka:29092
       KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,INTERNAL://:29092,CONTROLLER://:9093
       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
       KAFKA_CFG_INTER_BROKER_LISTENER_NAME: INTERNAL
@@ -74,22 +66,10 @@ services:
       retries: 5
       timeout: 5s
 
-  redpanda-console:
-    image: docker.redpanda.com/redpandadata/console:latest
-    container_name: redpanda-console
-    ports:
-      - '8080:8080'
-    environment:
-      - KAFKA_BROKERS=kafka:29092
-    depends_on:
-      - kafka
-
   redis:
     image: redis:7-alpine
-    container_name: yoo-redis
+    container_name: yoo-redis-prod
     restart: always
-    ports:
-      - '6379:6379'
     volumes:
       - redis_data:/data
     healthcheck:
