--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "docker:up": "docker compose -f docker-compose.yml up -d",
-    "docker:down": "docker compose -f docker-compose.yml down",
-    "docker:logs": "docker compose -f docker-compose.yml logs -f",
-    "docker:restart": "docker compose -f docker-compose.yml down && docker compose -f docker-compose.yml up -d",
+    "docker:up": "docker compose -f docker/docker-compose.yml up -d",
+    "docker:down": "docker compose -f docker/docker-compose.yml down",
+    "docker:logs": "docker compose -f docker/docker-compose.yml logs -f",
+    "docker:restart": "docker compose -f docker/docker-compose.yml down && docker compose -f docker/docker-compose.yml up -d",
     "db:seed": "ts-node -r tsconfig-paths/register database/seeder.ts",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "npm run typeorm migration:generate -- -d apps/api-gateway/src/commons/data-source.ts database/migrations/$npm_config_name",
