--- a/docker/docker-compose-prod.yml
+++ b/docker/docker-compose-prod.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - '3000:3000'
     env_file:
-      - .env
+      - ../.env
     depends_on:
       - mysql
       - kafka
