--- a/docker/docker-compose-prod.yml
+++ b/docker/docker-compose-prod.yml
@@ -2,7 +2,8 @@ version: '3.8'
 
 services:
   app:
-    image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:${IMAGE_TAG}
+    # image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:${IMAGE_TAG}
+    image: 672929528106.dkr.ecr.us-east-1.amazonaws.com/nestjs-app:latest
     container_name: yoo-app-prod
     restart: always
     ports:
