update docker file path

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -238,8 +238,9 @@ jobs:
           host: ${{ secrets.EC2_PUBLIC_IP }}
           username: ec2-user
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-          source: docker/docker-compose-prod.yml
+          source: ./docker/docker-compose-prod.yml
           target: /home/ec2-user/twitter-backend-node/
+          strip_components: 1
 
       - name: Confirm docker-compose file is present on EC2
         uses: appleboy/ssh-action@v1.0.0
