--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -239,7 +239,7 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           source: ./docker/docker-compose-prod.yml
-          target: /home/ec2-user/twitter-backend-node/
+          target: /home/ec2-user/twitter-backend-node/docker-compose-prod.yml
           strip_components: 1
 
       - name: Confirm docker-compose file is present on EC2
