--- a/docker/docker-compose-prod.yml
+++ b/docker/docker-compose-prod.yml
@@ -11,9 +11,12 @@ services:
     env_file:
       - .env
     depends_on:
-      - mysql
-      - kafka
-      - redis
+      mysql:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:3000/health']
       interval: 10s
