fix permission issue for scp reader

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -239,6 +239,9 @@ jobs:
           echo "🔍 Listing docker/ directory files"
           ls -la docker/
 
+      - name: Fix all permissions
+        run: chmod -R a+r docker/
+
       - name: Upload docker-compose file to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
