--- a/package.json
+++ b/package.json
@@ -46,8 +46,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.0",
+    "dataloader": "^2.2.3",
     "dotenv": "^17.0.1",
+    "graphql": "^16.11.0",
+    "ioredis": "^5.8.2",
     "kafkajs": "^2.2.4",
+    "lodash": "^4.17.21",
+    "lru-cache": "^11.0.0",
+    "moment": "^2.30.1",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.1.14",
@@ -104,5 +110,9 @@
     "moduleNameMapper": {
       "src/(.*)": "<rootDir>/src/$1"
     }
+  },
+  "resolutions": {
+    "string-width": "4.2.3",
+    "cli-table3/string-width": "4.2.3"
   }
 }
