--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,10 +1,12 @@
+name: yoo-stack
+
 services:
   app:
     build:
       context: ../
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "${APP_PORT:-3000}:3000"
     environment:
       - DATABASE_HOST=mysql
       - DATABASE_PORT=3306
