--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "docker:up": "docker compose -f docker/docker-compose.yml up -d",
+    "docker:up": "bash scripts/docker-up.sh",
     "docker:down": "docker compose -f docker/docker-compose.yml down",
     "docker:logs": "docker compose -f docker/docker-compose.yml logs -f",
     "docker:restart": "docker compose -f docker/docker-compose.yml down && docker compose -f docker/docker-compose.yml up -d",
@@ -77,6 +77,7 @@
     "@typescript-eslint/parser": "^8.35.0",
     "eslint": "^9.30.0",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-prettier": "^5.5.1",
     "jest": "^30.0.3",
     "prettier": "^3.6.2",
@@ -85,6 +86,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "^5.8.3"
   },
   "jest": {
