adds redis insight configurations

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,15 +7,17 @@ services:
       dockerfile: Dockerfile
     ports:
       - "${APP_PORT:-3000}:3000"
+    env_file:
+      - ../.env
     environment:
-      - DATABASE_HOST=mysql
-      - DATABASE_PORT=3306
-      - DATABASE_NAME=yoodb
-      - DATABASE_USER=yooadmin
-      - DATABASE_PASSWORD=yoopass
-      - KAFKA_BROKERS=kafka:29092
-      - REDIS_HOST=yoo-redis
-      - REDIS_PORT=6379
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_DATABASE_NAME: yoodb
+      DB_USER: yooadmin
+      DB_PASSWORD: yoopass
+      KAFKA_BROKER: kafka:29092
+      REDIS_HOST: yoo-redis
+      REDIS_PORT: 6379
     depends_on:
       - mysql
       - kafka
@@ -101,7 +103,19 @@ services:
       retries: 5
       timeout: 5s
 
+  redisinsight:
+    image: redis/redisinsight:latest
+    container_name: redisinsight
+    ports:
+      - "8001:5540"
+    depends_on:
+      redis:
+        condition: service_healthy
+    volumes:
+      - redisinsight_data:/data
+
 volumes:
   mysql_data:
   redis_data:
   kafka_data:
+  redisinsight_data:
