--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -50,19 +50,28 @@ services:
   kafka:
     image: apache/kafka:4.0.0
     container_name: kafka
-    restart: always
     ports:
-      - "${HOST_KAFKA_PORT:-9092}:9092"
+      - "9092:9092"
+      - "9093:9093"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:${HOST_KAFKA_PORT:-9092},INTERNAL://kafka:29092
-      KAFKA_LISTENERS: PLAINTEXT://:9092,INTERNAL://:29092,CONTROLLER://:9093
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_ENABLE_KRAFT: "yes"
-      KAFKA_NODE_ID: "1"
-      KAFKA_PROCESS_ROLES: "broker,controller"
-      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
+      # --- Core single-node KRaft setup ---
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+
+      # --- Topics and replication ---
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+
+      # --- Convenience (auto-create topics) ---
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+
+      # --- Storage ---
       KAFKA_LOG_DIRS: /var/lib/kafka/data
     volumes:
       - kafka_data:/var/lib/kafka/data
@@ -70,14 +79,14 @@ services:
       test:
         [
           "CMD",
-          "/opt/kafka/bin/kafka-topics.sh",
-          "--bootstrap-server",
-          "localhost:9092",
-          "--list",
+          "bash",
+          "-c",
+          "kafka-topics --bootstrap-server localhost:9092 --list",
         ]
       interval: 10s
-      retries: 5
-      timeout: 5s
+      timeout: 10s
+      retries: 10
+    restart: unless-stopped
 
   redpanda-console:
     image: docker.redpanda.com/redpandadata/console:latest
