--- a/package.json
+++ b/package.json
@@ -14,9 +14,20 @@
     "docker:logs": "docker compose -f docker/docker-compose.yml logs -f",
     "docker:restart": "docker compose -f docker/docker-compose.yml down && docker compose -f docker/docker-compose.yml up -d",
     "db:seed": "ts-node -r tsconfig-paths/register database/seeder.ts",
+    "db:backup": "ts-node -r tsconfig-paths/register database/backup.ts",
+    "db:backup:list": "ts-node -r tsconfig-paths/register database/backup.ts --list",
+    "db:restore": "ts-node -r tsconfig-paths/register database/restore.ts",
+    "db:restore:list": "ts-node -r tsconfig-paths/register database/restore.ts --list",
+    "db:restore:latest": "ts-node -r tsconfig-paths/register database/restore.ts --latest",
+    "db:reset": "ts-node -r tsconfig-paths/register database/drop.ts && npm run migration:run && npm run db:seed",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "node database/migration-generate.js",
     "migration:run": "npm run typeorm migration:run -- -d apps/api-gateway/src/modules/commons/data-source.ts",
+    "migration:revert": "npm run typeorm migration:revert -- -d apps/api-gateway/src/modules/commons/data-source.ts",
+    "migration:show": "npm run typeorm migration:show -- -d apps/api-gateway/src/modules/commons/data-source.ts",
+    "migration:status": "ts-node -r tsconfig-paths/register database/migrations/status.ts",
+    "migration:lint": "ts-node -r tsconfig-paths/register database/migrations/lint.ts",
+    "migration:test": "jest --config database/migrations/__tests__/jest.config.js",
     "prebuild": "rimraf dist",
     "postinstall": "node build/postInstall.js",
     "build": "nest build",
